--- a/index.html
+++ b/index.html
@@ -25,13 +25,16 @@
         <textarea id="kutipanInput" placeholder="Isi kutipan di sini..."></textarea>
     </div>
     <div>
-        <label for="namaInput">Nama</label>
-        <input type="text" id="namaInput" placeholder="Nama sumber kutipan" />
-    </div>
-    <div>
-        <label for="jabatanInput">Jabatan</label>
-        <input type="text" id="jabatanInput" placeholder="Jabatan sumber kutipan" />
-    </div>
+
+        <div>
+  <label for="namaInput">Nama</label>
+  <textarea id="namaInput" placeholder="Nama sumber kutipan"></textarea>
+</div>
+<div>
+  <label for="jabatanInput">Jabatan</label>
+  <textarea id="jabatanInput" placeholder="Jabatan sumber kutipan"></textarea>
+</div>
+
     <div>
         <label for="kreditInput">Kredit Foto</label>
         <input type="text" id="kreditInput" placeholder="Kredit Foto (opsional)" />
