--- a/index.html
+++ b/index.html
@@ -35,11 +35,16 @@
   <textarea id="jabatanInput" placeholder="Jabatan sumber kutipan"></textarea>
 </div>
 
-    <div>
-        <label for="kreditInput">Kredit Foto</label>
-        <input type="text" id="kreditInput" placeholder="Kredit Foto (opsional)" />
-    </div>
-    <button id="download">Download Hasil</button>
+        <div>
+  <label for="kreditInput">Kredit Foto</label>
+  <input type="text" id="kreditInput" placeholder="Kredit Foto (opsional)" />
+</div>
+<div>
+  <label for="kreditColor">Warna Kredit Foto</label>
+  <input type="color" id="kreditColor" value="#000000" />
+</div>
+
+            <button id="download">Download Hasil</button>
 </div>
 
 <div class="slider-controls">
