--- a/index.html
+++ b/index.html
@@ -35,14 +35,18 @@
   <textarea id="jabatanInput" placeholder="Jabatan sumber kutipan"></textarea>
 </div>
 
-        <div>
+<div>
   <label for="kreditInput">Kredit Foto</label>
   <input type="text" id="kreditInput" placeholder="Kredit Foto (opsional)" />
 </div>
 <div>
   <label for="kreditColor">Warna Kredit Foto</label>
-  <input type="color" id="kreditColor" value="#000000" />
+  <select id="kreditColor">
+    <option value="#000000">Hitam</option>
+    <option value="#FFFFFF">Putih</option>
+  </select>
 </div>
+
 
             <button id="download">Download Hasil</button>
 </div>
