--- a/index.html
+++ b/index.html
@@ -16,51 +16,57 @@
 <h1>Instagram Quote Generator</h1>
 
 <div class="controls">
-    <div>
-        <label for="uploadPhoto">Upload Foto Latar</label>
-        <input id="uploadPhoto" type="file" accept="image/*">
-    </div>
-    <div>
-        <label for="kutipanInput">Kutipan</label>
-        <textarea id="kutipanInput" placeholder="Isi kutipan di sini..."></textarea>
-    </div>
-    <div>
-        <label for="namaInput">Nama</label>
-        <textarea id="namaInput" placeholder="Nama sumber kutipan"></textarea>
-    </div>
-    <div>
-        <label for="jabatanInput">Jabatan</label>
-        <textarea id="jabatanInput" placeholder="Jabatan sumber kutipan"></textarea>
-    </div>
-    <div>
-        <label for="kreditInput">Kredit Foto</label>
-        <input type="text" id="kreditInput" placeholder="Kredit Foto (opsional)" />
-    </div>
-    <div>
-        <label for="kreditColor">Warna Kredit Foto</label>
-        <select id="kreditColor">
-            <option value="#000000">Hitam</option>
-            <option value="#FFFFFF">Putih</option>
-        </select>
-    </div>
-    <div>
-        <button id="download">Download Hasil</button>
-    </div>
+    <div>
+        <label for="uploadPhoto">Upload Foto Latar</label>
+        <input id="uploadPhoto" type="file" accept="image/*">
+    </div>
+
+    <div>
+        <label for="kutipanInput">Kutipan</label>
+        <textarea id="kutipanInput" placeholder="Isi kutipan di sini..."></textarea>
+    </div>
+
+<div>
+  <label for="namaInput">Nama</label>
+  <textarea id="namaInput" placeholder="Nama sumber kutipan"></textarea>
+</div>
+<div>
+  <label for="jabatanInput">Jabatan</label>
+  <textarea id="jabatanInput" placeholder="Jabatan sumber kutipan"></textarea>
 </div>
 
+<div>
+  <label for="kreditInput">Kredit Foto</label>
+  <input type="text" id="kreditInput" placeholder="Kredit Foto (opsional)" />
+</div>
+<div>
+  <label for="kreditColor">Warna Kredit Foto</label>
+  <select id="kreditColor">
+    <option value="#000000">Hitam</option>
+    <option value="#FFFFFF">Putih</option>
+  </select>
+</div>
+
+    <div class="download-button-wrapper">
+
+            <button id="download">Download Hasil</button>
+</div>
+</div>
+
+
 <div class="slider-controls">
-    <div>
-        <label for="zoomSlider">Zoom Foto</label>
-        <input type="range" id="zoomSlider" min="0.1" max="3" step="0.01" value="1" />
-    </div>
-    <div>
-        <label for="quoteYSlider">Geser Blok Kutipan</label>
-        <input type="range" id="quoteYSlider" min="200" max="800" value="385" />
-    </div>
+    <div>
+        <label for="zoomSlider">Zoom Foto</label>
+        <input type="range" id="zoomSlider" min="0.1" max="3" step="0.01" value="1" />
+    </div>
+    <div>
+        <label for="quoteYSlider">Geser Blok Kutipan</label>
+        <input type="range" id="quoteYSlider" min="200" max="800" value="385" />
+    </div>
 </div>
 
 <div class="canvas-container" id="canvasContainer">
-    <canvas id="canvas" width="1080" height="1350"></canvas>
+<canvas id="canvas" width="1080" height="1350"></canvas>
 </div>
 </div>
 
