--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
         <label for="uploadPhoto">Upload Foto Latar</label>
         <input id="uploadPhoto" type="file" accept="image/*">
     </div>
-
     <div>
         <label for="kutipanInput">Kutipan</label>
         <textarea id="kutipanInput" placeholder="Isi kutipan di sini..."></textarea>
     </div>
+    <div>
 
 <div>
   <label for="namaInput">Nama</label>
@@ -47,10 +47,9 @@
   </select>
 </div>
 
+
             <button id="download">Download Hasil</button>
 </div>
-</div>
-
 
 <div class="slider-controls">
     <div>
