--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
                     <textarea id="kutipanInput" placeholder="Masukkan kutipan di sini..."></textarea>
                 </div>
                 <div>
-                    <label for="namaInput">Nama Tokoh</label>
-                    <input id="namaInput" placeholder="Nama sumber kutipan, mis: Prof. Dr. Andi Bachtiar" />
+                    <label for="namaInput">Nama Tokoh (Multi-baris)</label>
+                    <textarea id="namaInput" placeholder="Nama sumber kutipan, mis: Prof. Dr. Andi Bachtiar"></textarea>
                 </div>
                 <div>
-                    <label for="jabatanInput">Jabatan / Keterangan</label>
-                    <input id="jabatanInput" placeholder="Jabatan atau keterangan tambahan, mis: Pakar Ekonomi UI" />
+                    <label for="jabatanInput">Jabatan / Keterangan (Multi-baris)</label>
+                    <textarea id="jabatanInput" placeholder="Jabatan atau keterangan tambahan, mis: Pakar Ekonomi UI"></textarea>
                 </div>
             </div>
 
